--- a/jdbc/bin/com/sample/bookstore/dao/query.properties
+++ b/jdbc/bin/com/sample/bookstore/dao/query.properties
@@ -10,9 +10,9 @@ book.getBooksByGenre=SELECT * FROM sample_books WHERE book_genre LIKE '%'||?||'%
 book.getBooksByPriceRange=SELECT * FROM sample_books WHERE BOOK_PRICE BETWEEN ? AND ? ORDER BY BOOK_NO DESC 
 book.removeBookByNo=DELETE FROM sample_books WHERE BOOK_NO = ? 
 book.updateBook=UPDATE SAMPLE_BOOKS \
-SET \
-    BOOK_TITLE = ?, BOOK_WRITE = ?, BOOK_GENRE = ?, BOOK_DISCOUNT_PRICE = ?, \
-    book_publisher = ?, BOOK_PRICE = ?, BOOK_STOCK =? WHERE BOOK_NO =? 
+				SET \
+			    BOOK_TITLE = ?, BOOK_WRITE = ?, BOOK_GENRE = ?, BOOK_DISCOUNT_PRICE = ?, \
+			    book_publisher = ?, BOOK_PRICE = ?, BOOK_STOCK =?, BOOK_POINT = ? WHERE BOOK_NO =? 
 
 user.addUser=INSERT INTO SAMPLE_BOOK_USERS\
 			 ( USER_ID,USER_PASSWORD, USER_NAME, \
@@ -62,7 +62,7 @@ question.addQuestion=INSERT INTO SAMPLE_BOOK_QUESTIONS \
 					( SAMPLE_QUESTION_SEQ.nextval, ?,?,?,?)
 question.getQuestionByNo=select a.QUESTION_NO, a.question_title,a.question_content, \
 								b.user_id, b.user_name, a.question_registered_date, \
-								a.question_status, a.question_type, c.answer_no, \
+								a.question_status, a.question_type, nvl(c.answer_no, 0) answer_no, \
 								c.answer_content \
 						from sample_book_questions A, sample_book_users B, SAMPLE_BOOK_ANSWER C \
 						where a.user_id = b.user_id \
@@ -79,4 +79,24 @@ answer.addAnswer=INSERT INTO SAMPLE_BOOK_ANSWER \
 				(SAMPLE_ANSWER_SEQ.nextval, ?,SYSDATE, ?)	
 answer.getAnswer=select answer_no, answer_content , answer_registered_date, question_no \
 				from sample_book_answer \
-				where question_no = ?					
+				where question_no = ?			
+
+review.getReviewsByUserId=SELECT A.BOOK_NO, B.BOOK_TITLE, A.USER_ID, c.user_name, a.review_content, \
+								 A.REVIEW_POINT, a.review_registered_date \
+						  FROM SAMPLE_BOOK_REVIEWS A, SAMPLE_BOOKS B, SAMPLE_BOOK_USERS C \
+						  WHERE a.book_no = B.BOOK_NO AND A.USER_ID = C.USER_ID \
+						  and A.user_id = ? 
+review.getReviewsByBookNo=SELECT A.BOOK_NO, B.BOOK_TITLE, A.USER_ID, c.user_name, a.review_content, \
+							A.REVIEW_POINT, a.review_registered_date \
+					 FROM SAMPLE_BOOK_REVIEWS A, SAMPLE_BOOKS B, SAMPLE_BOOK_USERS C \
+					 WHERE a.book_no = B.BOOK_NO \
+					 AND A.USER_ID = C.USER_ID \
+					 AND a.book_no = ? 
+review.addReview=INSERT INTO sample_book_reviews \
+				 VALUES \
+				 (SAMPLE_REVIEW_SEQ.nextval, ?,?,SYSDATE,?,?) 
+
+				
+				
+				
+						
